// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="radio-preview">
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="mnsry1gkzjh3"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="mnsry1gkzjh3"
  >
    Description
  </div>
</ds-field>
`;

exports[`Inline 1`] = `
<fieldset aria-labelledby="undefinedlegend undefineddescription">
  <legend
    id="undefinedlegend"
    data-weight="medium"
  >
    Kontaktes på e-post?
  </legend>
  <p
    data-variant="default"
    id="undefineddescription"
  >
    Bekreft om du ønsker å bli kontaktet per e-post.
  </p>
  <div style="display: flex; flex-wrap: wrap; gap: var(--ds-size-6);">
    <ds-field data-clickdelegatefor="undefined-inline-ja">
      <input
        id="undefined-inline-ja"
        type="radio"
        value="ja"
        name="my-inline"
      >
      <label
        data-weight="regular"
        for="undefined-inline-ja"
      >
        Ja
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="undefined-inline-nei">
      <input
        id="undefined-inline-nei"
        type="radio"
        value="nei"
        name="my-inline"
      >
      <label
        data-weight="regular"
        for="undefined-inline-nei"
      >
        Nei
      </label>
    </ds-field>
  </div>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="radio-preview">
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="mnsry1gkzjh1"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="mnsry1gkzjh1"
  >
    Description
  </div>
</ds-field>
`;

exports[`Radio In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="radio-in-color-context">
    <input
      id="radio-in-color-context"
      type="radio"
      checked
      aria-describedby="mnsry1gkzjh2"
    >
    <label
      data-weight="regular"
      for="radio-in-color-context"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="mnsry1gkzjh2"
    >
      Description
    </div>
  </ds-field>
</div>
`;
